refacto: simplify WkfMenuServiceImpl